--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -44,5 +44,5 @@ jobs:
         target_branch: gh-pages
         build_dir: docs/_build/html
       env:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_PAGES }}
   
