--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -44,5 +44,4 @@ jobs:
         target_branch: gh-pages
         build_dir: docs/_build/html
       env:
-        GITHUB_TOKEN: c93d301a21dd975a0e48533b13dff77e495c3532
-  
+        GITHUB_TOKEN: ${{ secrets.GERD2 }}
