--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -45,5 +45,5 @@ jobs:
         target_branch: gh-pages
         build_dir: docs/_build/html
       env:
-        github_token: ${{ secrets.GERD2 }}
+        GITHUB_TOKEN: ${{ secrets.GERD2 }}
   
