--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,16 @@ Diffraction/.ipynb_checkpoints/CH2_03b-JSmol_Viewer-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_03c-FourierTransformLaboratory-checkpoint.ipynb
 Homework/.ipynb_checkpoints/Homework01-checkpoint.ipynb
 Introduction/.ipynb_checkpoints/CH1_03-Data_Representation-checkpoint.ipynb
+.pyTEMlib.files.pkl
+example_data/p1_3_hr3-1.hf5
+example_data/p1_3_hr3-2.hf5
+example_data/p1_3_hr3.hf5
+example_data/p1_hr3_ZnOonGraphite-1.hf5
+example_data/p1_hr3_ZnOonGraphite.hf5
+Introduction/.ipynb_checkpoints/CH1_00-Introduction-checkpoint.ipynb
+Introduction/.ipynb_checkpoints/CH1_01-Introduction_Python-checkpoint.ipynb
+Introduction/.ipynb_checkpoints/CH1_02-Prerequisites-checkpoint.ipynb
+Introduction/.ipynb_checkpoints/CH1_04-Open_File-checkpoint.ipynb
+Introduction/.ipynb_checkpoints/CH1_05-Course_Organization-checkpoint.ipynb
+Introduction/.ipynb_checkpoints/CH1_06-Overview-checkpoint.ipynb
+Introduction/.ipynb_checkpoints/CH1_07-Electron-Optics-checkpoint.ipynb
