--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -29,6 +29,7 @@ jobs:
         sudo apt-get update -qq
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest coveralls
+        python -m pip install ipykernel
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
            
     - name: Documentation build
