--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ Introduction/.ipynb_checkpoints/CH1_04-Open_File-checkpoint.ipynb
 Introduction/.ipynb_checkpoints/CH1_05-Course_Organization-checkpoint.ipynb
 Introduction/.ipynb_checkpoints/CH1_06-Overview-checkpoint.ipynb
 Introduction/.ipynb_checkpoints/CH1_07-Electron-Optics-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2-Introduction-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_04-Structure_Factors-checkpoint.ipynb
