--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ Introduction/.ipynb_checkpoints/CH1_06-Overview-checkpoint.ipynb
 Introduction/.ipynb_checkpoints/CH1_07-Electron-Optics-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2-Introduction-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_04-Structure_Factors-checkpoint.ipynb
+example_data/GOLD_NP_DIFF-1.hf5
+example_data/GOLD_NP_DIFF.hf5
+Diffraction/.ipynb_checkpoints/CH2_05-Diffraction_Rings-checkpoint.ipynb
