--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ Diffraction/.ipynb_checkpoints/CH2_04-Structure_Factors-checkpoint.ipynb
 example_data/GOLD_NP_DIFF-1.hf5
 example_data/GOLD_NP_DIFF.hf5
 Diffraction/.ipynb_checkpoints/CH2_05-Diffraction_Rings-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_06-Kinematic_Scattering_Geometry-checkpoint.ipynb
