--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ example_data/GOLD_NP_DIFF-1.hf5
 example_data/GOLD_NP_DIFF.hf5
 Diffraction/.ipynb_checkpoints/CH2_05-Diffraction_Rings-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_06-Kinematic_Scattering_Geometry-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_07-Plotting_Diffraction_Pattern-checkpoint.ipynb
