--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ example_data/GOLD_NP_DIFF.hf5
 Diffraction/.ipynb_checkpoints/CH2_05-Diffraction_Rings-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_06-Kinematic_Scattering_Geometry-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_07-Plotting_Diffraction_Pattern-checkpoint.ipynb
+example_data/Si001_300mm_alpha0.1_beta9.4_diff.hf5
+Diffraction/.ipynb_checkpoints/CH2_08-Spot_Diffraction_Pattern-checkpoint.ipynb
