--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ Diffraction/.ipynb_checkpoints/CH2_07-Plotting_Diffraction_Pattern-checkpoint.ip
 example_data/Si001_300mm_alpha0.1_beta9.4_diff.hf5
 Diffraction/.ipynb_checkpoints/CH2_08-Spot_Diffraction_Pattern-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_09-Unit_Cell-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_01-Electron-checkpoint.ipynb
+Diffraction/slab.xyz
