--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ Diffraction/.ipynb_checkpoints/CH2_08-Spot_Diffraction_Pattern-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_09-Unit_Cell-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_01-Electron-checkpoint.ipynb
 Diffraction/slab.xyz
+Diffraction/.ipynb_checkpoints/CH2_06b-3D_FFT-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_06b-Relrod-checkpoint.ipynb
