--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ Diffraction/.ipynb_checkpoints/CH2_01-Electron-checkpoint.ipynb
 Diffraction/slab.xyz
 Diffraction/.ipynb_checkpoints/CH2_06b-3D_FFT-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_06b-Relrod-checkpoint.ipynb
+.idea/misc.xml
+.idea/MSE672-Introduction-to-TEM.iml
