--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ Diffraction/.ipynb_checkpoints/CH2_06b-3D_FFT-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_06b-Relrod-checkpoint.ipynb
 .idea/misc.xml
 .idea/MSE672-Introduction-to-TEM.iml
+Diffraction/.ipynb_checkpoints/CH2_10-Kikuchi_Lines-Copy1-checkpoint.ipynb
+example_data/GOLD_NP_DIFF-2.hf5
+Homework/.ipynb_checkpoints/Homework02-checkpoint.ipynb
