--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ Diffraction/.ipynb_checkpoints/CH2_06b-Relrod-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_10-Kikuchi_Lines-Copy1-checkpoint.ipynb
 example_data/GOLD_NP_DIFF-2.hf5
 Homework/.ipynb_checkpoints/Homework02-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_10-Kikuchi_Lines-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_11-HOLZ_Lines-checkpoint.ipynb
