--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ Diffraction/.ipynb_checkpoints/CH2_10-Kikuchi_Lines-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_11-HOLZ_Lines-checkpoint.ipynb
 example_data/GOLD_NP_DIFF-3.hf5
 example_data/Si001_300mm_alpha0.1_beta9.4_diff-1.hf5
+Diffraction/.ipynb_checkpoints/Homework03-checkpoint.ipynb
