--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ example_data/GOLD_NP_DIFF-3.hf5
 example_data/Si001_300mm_alpha0.1_beta9.4_diff-1.hf5
 Diffraction/.ipynb_checkpoints/Homework03-checkpoint.ipynb
 example_data/GOLD_NP_DIFF-4.hf5
+Homework/.ipynb_checkpoints/Homework03-checkpoint.ipynb
