--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ example_data/Si001_300mm_alpha0.1_beta9.4_diff-1.hf5
 Diffraction/.ipynb_checkpoints/Homework03-checkpoint.ipynb
 example_data/GOLD_NP_DIFF-4.hf5
 Homework/.ipynb_checkpoints/Homework03-checkpoint.ipynb
+example_data/Si001_300mm_alpha0.1_beta9.4_diff-2.hf5
+example_data/Si001_300mm_alpha0.1_beta9.4_diff-3.hf5
