Fixed Kikuchi and HOLZ line plot

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Homework/.ipynb_checkpoints/Homework03-checkpoint.ipynb
 example_data/Si001_300mm_alpha0.1_beta9.4_diff-2.hf5
 example_data/Si001_300mm_alpha0.1_beta9.4_diff-3.hf5
 Homework/.ipynb_checkpoints/Homework04-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_12-HOLZ_Example-checkpoint.ipynb
