Updated Dynamic Diffraction to ASE compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,9 @@ example_data/Si001_300mm_alpha0.1_beta9.4_diff-2.hf5
 example_data/Si001_300mm_alpha0.1_beta9.4_diff-3.hf5
 Homework/.ipynb_checkpoints/Homework04-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_12-HOLZ_Example-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_D01-Bloch-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_D02-Multislice-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_D03-Multislice_CBED-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_HW5-CBED-checkpoint.ipynb
+Diffraction/.ipynb_checkpoints/CH2_HW7-Dynamic_CBED-checkpoint.ipynb
+example_data/CBED_375mm_alpha_3.3_beta9.6_Condensor10um_Filter.hf5
