--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ Diffraction/.ipynb_checkpoints/CH2_D03-Multislice_CBED-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_HW5-CBED-checkpoint.ipynb
 Diffraction/.ipynb_checkpoints/CH2_HW7-Dynamic_CBED-checkpoint.ipynb
 example_data/CBED_375mm_alpha_3.3_beta9.6_Condensor10um_Filter.hf5
+Homework/.ipynb_checkpoints/Homework05-CBED-checkpoint.ipynb
+Homework/.ipynb_checkpoints/Homework06-TwoBeam-checkpoint.ipynb
+Homework/.ipynb_checkpoints/Homework07-Dynamic_CBED-checkpoint.ipynb
