--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ example_data/CBED_375mm_alpha_3.3_beta9.6_Condensor10um_Filter.hf5
 Homework/.ipynb_checkpoints/Homework05-CBED-checkpoint.ipynb
 Homework/.ipynb_checkpoints/Homework06-TwoBeam-checkpoint.ipynb
 Homework/.ipynb_checkpoints/Homework07-Dynamic_CBED-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_00-Imaging-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_01-Resolution-checkpoint.ipynb
