Updated CTF to Angstrom base

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,8 @@ Homework/.ipynb_checkpoints/Homework06-TwoBeam-checkpoint.ipynb
 Homework/.ipynb_checkpoints/Homework07-Dynamic_CBED-checkpoint.ipynb
 Imaging/.ipynb_checkpoints/CH3_00-Imaging-checkpoint.ipynb
 Imaging/.ipynb_checkpoints/CH3_01-Resolution-checkpoint.ipynb
+example_data/CBED_375mm_alpha_3.3_beta9.6_Condensor10um_Filter-1.hf5
+example_data/CBED_375mm_alpha_3.3_beta9.6_Condensor10um_Filter-2.hf5
+example_data/Si001_300mm_alpha0.1_beta9.4_diff-4.hf5
+Imaging/.ipynb_checkpoints/CH3_04-Linear_Image_Approximation-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_03-CTF-checkpoint.ipynb
