--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,28 @@ example_data/CBED_375mm_alpha_3.3_beta9.6_Condensor10um_Filter-2.hf5
 example_data/Si001_300mm_alpha0.1_beta9.4_diff-4.hf5
 Imaging/.ipynb_checkpoints/CH3_04-Linear_Image_Approximation-checkpoint.ipynb
 Imaging/.ipynb_checkpoints/CH3_03-CTF-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_04-Linear_Image_Approximation-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_05-Defocus_Thickness-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_07-Image_Analysis-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_08-Thermal_Diffuse_Scattering-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_09-Z_Contrast-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_10-Ronchigram-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_04-Linear_Image_Approximation-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_05-Defocus_Thickness-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_07-Image_Analysis-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_10-Ronchigram-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_04-Linear_Image_Approximation-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_05-Defocus_Thickness-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_07-Image_Analysis-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_10-Ronchigram-checkpoint.ipynb
+*.ipynb
+Imaging/.ipynb_checkpoints/CH3_04-Linear_Image_Approximation-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_05-Defocus_Thickness-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_04-Linear_Image_Approximation-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_05-Defocus_Thickness-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_07-Image_Analysis-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_10-Ronchigram-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_04-Linear_Image_Approximation-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_05-Defocus_Thickness-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_07-Image_Analysis-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_10-Ronchigram-checkpoint.ipynb
