--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ Imaging/.ipynb_checkpoints/CH3_04-Linear_Image_Approximation-checkpoint.ipynb
 Imaging/.ipynb_checkpoints/CH3_05-Defocus_Thickness-checkpoint.ipynb
 Imaging/.ipynb_checkpoints/CH3_07-Image_Analysis-checkpoint.ipynb
 Imaging/.ipynb_checkpoints/CH3_10-Ronchigram-checkpoint.ipynb
+Imaging/.ipynb_checkpoints/CH3_04-Linear_Image_Approximation-checkpoint.ipynb
