--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,14 @@ Imaging/.ipynb_checkpoints/CH3_05-Defocus_Thickness-checkpoint.ipynb
 Imaging/.ipynb_checkpoints/CH3_07-Image_Analysis-checkpoint.ipynb
 Imaging/.ipynb_checkpoints/CH3_10-Ronchigram-checkpoint.ipynb
 Imaging/.ipynb_checkpoints/CH3_04-Linear_Image_Approximation-checkpoint.ipynb
+Diffraction/images/1-s2.0-0956716X9190393F-main.pdf
+Diffraction/images/1-s2.0-S1359645499000464-main.pdf
+example_data/1EELS Acquire (high_loss)-1.hf5
+example_data/1EELS Acquire (high_loss).hf5
+example_data/1EELS Acquire (low_loss)-1.hf5
+example_data/1EELS Acquire (low_loss).hf5
+example_data/AL_DFoffset0.00-1.hf5
+example_data/AL_DFoffset0.00-2.hf5
+example_data/AL_DFoffset0.00.hf5
+example_data/p1_3_hr3-3.hf5
+example_data/p1_hr3_ZnOonGraphite-2.hf5
