Remove google colab dependency

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@ example_data/AL_DFoffset0.00-2.hf5
 example_data/AL_DFoffset0.00.hf5
 example_data/p1_3_hr3-3.hf5
 example_data/p1_hr3_ZnOonGraphite-2.hf5
+example_data/AL_DFoffset0.00-3.hf5
