--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,8 @@ example_data/AL_DFoffset0.00.hf5
 example_data/p1_3_hr3-3.hf5
 example_data/p1_hr3_ZnOonGraphite-2.hf5
 example_data/AL_DFoffset0.00-3.hf5
+example_data/AL_DFoffset0.00-4.hf5
+example_data/AL_DFoffset0.00-5.hf5
+example_data/AL_DFoffset0.00-6.hf5
+example_data/AL_DFoffset0.00-7.hf5
+example_data/AL_DFoffset0.00-8.hf5
