--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,5 @@ example_data/AL_DFoffset0.00-5.hf5
 example_data/AL_DFoffset0.00-6.hf5
 example_data/AL_DFoffset0.00-7.hf5
 example_data/AL_DFoffset0.00-8.hf5
+example_data/1EELS Acquire (high_loss)-2.hf5
+example_data/1EELS Acquire (low_loss)-2.hf5
