--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,7 @@ example_data/AL_DFoffset0.00-7.hf5
 example_data/AL_DFoffset0.00-8.hf5
 example_data/1EELS Acquire (high_loss)-2.hf5
 example_data/1EELS Acquire (low_loss)-2.hf5
+example_data/1EELS Acquire (high_loss)-3.hf5
+example_data/1EELS Acquire (high_loss)-4.hf5
+example_data/1EELS Acquire (high_loss)-5.hf5
+example_data/6_SiC.hf5
