update to new version of pyTEMlib

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,8 @@ example_data/1EELS Acquire (high_loss)-3.hf5
 example_data/1EELS Acquire (high_loss)-4.hf5
 example_data/1EELS Acquire (high_loss)-5.hf5
 example_data/6_SiC.hf5
+.ipynb_checkpoints/_MSE672_Intro_TEM-checkpoint.ipynb
+Diffraction/Gold_SAED.hf5
+example_data/6_SiC-1.hf5
+Introduction/.hf5
+Introduction/nix.hf5
