--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -17,11 +17,11 @@ jobs:
         python-version: [3.9]
 
     steps:
-    - uses: actions/checkout@vv3.6.0
+    - uses: actions/checkout@v3.6.0
       
     - name: Set up Python ${{ matrix.python-version }}
       
-      uses: actions/setup-python@vv3.6.0
+      uses: actions/setup-python@v3.6.0
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
