--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -17,7 +17,7 @@ jobs:
         python-version: [3.9]
 
     steps:
-    - uses: actions/checkout@v3.6.0
+    - uses: actions/setup-node@v3.6.0
       
     - name: Set up Python ${{ matrix.python-version }}
       
