--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,5 @@ Diffraction/Gold_SAED.hf5
 example_data/6_SiC-1.hf5
 Introduction/.hf5
 Introduction/nix.hf5
+.ipynb_checkpoints/_MSE672_Intro_TEM-checkpoint.ipynb
+Diffraction/Gold_SAED-1.hf5
