--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -34,11 +34,7 @@ jobs:
            
     - name: Documentation build
       run: |
-        pip install sphinx>=3.1.1 sphinx-gallery sphinx-rtd-theme>=0.5.0 sphinx-autodoc-typehints numpydoc wget pysptools cvxopt scipy nbsphinx
-        sudo apt-get install pandoc
-        sphinx-build -b html -aET ./ docs/_build/html
-        touch docs/_build/html/.nojekyll
-        
+        pip install sphinx>=3.1.1 
     - name: Deploy to GitHub Pages
       uses: crazy-max/ghaction-github-pages@v2
       with:
