--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,7 +32,8 @@ jobs:
     # Build the book
     - name: Build the book
       run: |
-        sphinx-build -b html -aET docs/source docs/_build/html - touch docs/_build/html/.nojekyll
+        sphinx-build -b html -aET docs/source docs/_build/html 
+        touch docs/_build/html/.nojekyll
         jupyter-book build .
 
     # Push the book's HTML to github-pages
