--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,12 +33,16 @@ jobs:
     - name: Build the book
       run: |
         jupyter-book build ./ --all --path-output ./docs/
-        touch .touch docs/_build/html/.nojekyll
+        touch ./docs/_build/html/.nojekyll
         
 
     # Push the book's HTML to github-pages
-    - name: GitHub Pages action
-      uses: peaceiris/actions-gh-pages@v3.6.1
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/_build/html
+    - name: Deploy to GitHub Pages
+    if: ${{ matrix.python-version == env.PYTHON_MAIN_VERSION && github.ref == 'refs/heads/master'}}
+    uses: crazy-max/ghaction-github-pages@v2
+    with:
+      target_branch: gh-pages
+      build_dir: docs/_build/html
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+      
