--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,7 +32,7 @@ jobs:
     # Build the book
     - name: Build the book
       run: |
-        # jupyter-book build ./ --all --path-output ./docs/
+        jupyter-book build ./ --all --path-output ./docs/
         mv -f ./docs/_build/html/* ./docs/
         touch ./docs/.nojekyll
         
