--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -38,9 +38,7 @@ jobs:
 
     # Push the book's HTML to github-pages
     - name: Deploy to GitHub Pages
-      uses: crazy-max/ghaction-github-pages@v3
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        target_branch: gh-pages
-        build_dir: ./docs/_build/html/
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./docs/_build/html
