--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,13 +32,12 @@ jobs:
     # Build the book
     - name: Build the book
       run: |
-        jupyter-book build ./ --all --path-output ./docs/
-        touch ./docs/_build/html/.nojekyll
-        
+        jupyter-book build .
+        touch _build/html/.nojekyll
 
     # Push the book's HTML to github-pages
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./docs/_build/html
+        publish_dir: _build/html
