--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -32,7 +32,7 @@ jobs:
     # Build the book
     - name: Build the book
       run: |
-        jupyter-book build .
+        #jupyter-book build .
         touch _build/html/.nojekyll
 
     # Push the book's HTML to github-pages
