--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Build the book
       run: |
         # jupyter-book build .
-        touch _build/html/.nojekyll
+        touch docs/.nojekyll
 
     # Push the book's HTML to github-pages
     - name: Deploy to GitHub Pages
