--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,46 +1,47 @@
-name: deploy-book
+name: Build Sphinx Documentation
 
-# Only run this when the master branch changes
 on:
+  pull_request:
+    branches:
+      - '*'
   push:
     branches:
-    - main
-    # If your git repository has the Jupyter Book within some-subfolder next to
-    # unrelated files, you can make this run only if a file within that specific
-    # folder has been modified.
-    #
-    # paths:
-    # - some-subfolder/**
+      - '*'
 
-# This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
-  deploy-book:
+  build-linux:
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 5
+      matrix:
+        python-version: [3.8]
+
     steps:
-    - uses: actions/checkout@v3
-
-    # Install dependencies
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v3
+    - uses: actions/checkout@v2
+      
+    - name: Set up Python ${{ matrix.python-version }}
+      
+      uses: actions/setup-python@v2
       with:
-        python-version: 3.8
-
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
-
-    # Build the book
-    - name: Build the book
+        sudo apt-get update -qq
+        python -m pip install --upgrade pip
+        python -m pip install flake8 pytest coveralls
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+           
+    - name: Documentation build
       run: |
-        # jupyter-book build ./ --all --path-output ./docs/
-        touch ./docs/.nojekyll
+        pip install sphinx>=3.1.1 sphinx-gallery sphinx-rtd-theme>=0.5.0 sphinx-autodoc-typehints numpydoc wget pysptools cvxopt scipy nbsphinx
+        sudo apt-get install pandoc
+        sphinx-build -b html -aET ./ docs/_build/html
+        touch docs/_build/html/.nojekyll
         
-
-    # Push the book's HTML to github-pages
     - name: Deploy to GitHub Pages
-      uses: crazy-max/ghaction-github-pages@v3
+      uses: crazy-max/ghaction-github-pages@v2
       with:
         target_branch: gh-pages
-        build_dir: docs/
+        build_dir: docs/_build/html
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
