--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,18 +10,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.8
+          python-version: 3.9
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
           pip install jupyter-book ghp-import
       - name: Build Jupyter Book
         run: |
-          jupyter-book build --all content/
+          cd docs/
+          jupyter-book build --all .
           touch _build/html/.nojekyll
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
