--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ Spectroscopy/advanced_image_tools.py
 Spectroscopy/data/Bote.txt
 Spectroscopy/data/ffast.pkl
 Spectroscopy/data/lineweight.txt
+docs/Untitled.html
